tests/NormalTests/paczka1/small_fuzzy/50701981.err
Error in line 6: zoKPFkBrj A110 79,2
Error in line 13: bAM A110 86,0
Error in line 15: A@64 A9@6 24,9
